modif loading screen

--- a/www/loading1.html
+++ b/www/loading1.html
@@ -12,6 +12,8 @@
         <main class="loading_screen">
             <div class="app">
                 <img src="img/logo.svg" alt="">
+                <img src="img/unleased.svg" alt="">
+                <h3 class="sous_titre">L'aventure urbaine</h3>
             </div>
 
         </main>
