--- a/www/loading3.html
+++ b/www/loading3.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        
-        <title>Hello World</title>
-    </head>
-    <body>
-        <main class="loading_screen">
-            <div class="app">
-                <img src="img/bagpack.svg" alt="">
-                <h4 class="loading3">Unleased souhaite préserver les codes de l’Urbex</h4>
-
-                <div class="bulletpoint">
-                    <div class="bullet"></div>
-                    <div class="bullet active"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                </div>
+<head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    
+    <title>Hello World</title>
+</head>
+<body>
+    <main class="loading_screen">
+        <img src="img/logo.svg" alt="" class="logo_opacity">
+        <div class="app">
+            <img src="img/boussole.svg" alt="" class="img_loading">
+            <h4 class="loading3">Pour le moment tu es scout, tu as donc un accès limité à l’application</h4>           
+            <div class="bulletpoint">
+                <div class="bullet"></div>
+                <div class="bullet active"></div>
+                <div class="bullet"></div>
             </div>
-        </main>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+        </div>
+        <img src="img/round.svg" alt="" class="round">
+    </main>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+</body>
 </html>
